fix release name expanding and wrapping to a second line in tables
The code that splits the release names into two sections expects 100% to
be its actual maximum width. When the river was combined into the same
table cell, this broke that expectation. Use a flexbox to lay out the
items in the cell to limit the release name properly.

--- a/root/static/scss/global.scss
+++ b/root/static/scss/global.scss
@@ -111,7 +111,7 @@ table.keyboard-shortcuts td.keys {
 }
 
 .river-gauge-gauge {
-    vertical-align: middle;
+    vertical-align: text-bottom;
 }
 
 button.favorite,
